--- a/ex01.css
+++ b/ex01.css
@@ -1,3 +1,10 @@
-#pai{
+#pai {
     background-color: blue;
+    color: white;
+    padding: 30px;
+    border-radius: 10px;
+    width: 350px;
+    margin: 50px auto;
+    text-align: center;
+    font-family: Arial, sans-serif;
 }
