--- a/ex01.css
+++ b/ex01.css
@@ -2,16 +2,14 @@
     background-color: #89059e;
     color: #fff;
     padding: 30px;
-    border-radius: 16px;
     width: 350px;
     margin: 60px auto;
     text-align: center;
     font-family: Arial, sans-serif;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.2);
 }
 
 #pai h1 {
-    margin-bottom: 16px;
+    margin: 16px;
     font-size: 2em;
     letter-spacing: 1px;
 }
