--- a/ex01.css
+++ b/ex01.css
@@ -1,11 +1,12 @@
 #pai {
-    background-color: #89059e;
+    background-color: #ff0080;
     color: #fff;
     padding: 30px;
     width: 350px;
     margin: 60px auto;
     text-align: center;
     font-family: Arial, sans-serif;
+    border-radius: 25px;
 }
 
 #pai h1 {
@@ -21,6 +22,6 @@
 
 #pai botao {
     background-color: #ff00f2;
-    font-size: 2em;
+    font-size: 5em;
 
 }
